# Puzzle

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  Jenkinsfile  README.md  genqt.sh
include/: mainwindow.h
source/: main.cpp  mainwindow.cpp
src/: main.cpp  mainwindow.cpp
ui/: mainwindow.ui
